--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
     <header class="header">
       <div class="header__top">
         <img src="images/logo.png" alt="Miami Condo Kings logo" class="logo header__logo">
-        <div class="header__phone"><a href="tel:+12345555555" class="header__link">+1 234 555-55-55</a></div>
-        <div class="header__action"><a href="tel:+12345555555" class="header__link header__link_call">Call to order</a>
-        </div>
+        <a href="tel:+12345555555" class="header__phone header__link">+1 234 555-55-55</a>
+        <a href="tel:+12345555555" class="header__action header__link header__link_call">Call to order</a>
       </div>
       <nav class="nav header__nav">
         <ul class="nav__list">
@@ -81,9 +80,9 @@
               twentieth century, microforms, found a distant historical.</p>
           </article>
           <form action="#" method="post" class="form consultation__form">
-            <label><input type="text" name="name" placeholder="Name" class="input form__input"></label>
-            <label><input type="text" name="phone" placeholder="Phone" class="input form__input"></label>
-            <label><input type="text" name="email" placeholder="Email" class="input form__input"></label>
+            <input type="text" name="name" placeholder="Name" class="input form__input">
+            <input type="text" name="phone" placeholder="Phone" class="input form__input">
+            <input type="text" name="email" placeholder="Email" class="input form__input">
             <button class="button form__button">Consultation</button>
           </form>
         </div>
@@ -120,16 +119,16 @@
         <h2 class="heading section__heading" id="contacts">Contact Us<span class="heading__crown"></span></h2>
         <div class="contact">
           <article class="contact_text">
-            <p><a href="mailto:Hello@miami.com" class="contact__link">Hello@miami.com</a><br><a href="tel:+12345555555"
+            <a href="mailto:Hello@miami.com" class="contact__link">Hello@miami.com</a><br><a href="tel:+12345555555"
                                                                                                 class="contact__link">+1
-              234 555-55-55</a></p>
+              234 555-55-55</a>
             <address class="contact__address">400 first ave. n.<br>suite 700<br>Minneapolis, MN 55401</address>
           </article>
           <form action="#" method="post" class="form contact__form">
-            <label><input type="text" name="name" placeholder="Name" class="input form__input"></label>
-            <label><input type="text" name="email" placeholder="Email" class="input form__input"></label>
-            <label><textarea name="message" placeholder="Message"
-                             class="input input_textarea form__input"></textarea></label>
+            <input type="text" name="name" placeholder="Name" class="input form__input">
+            <input type="text" name="email" placeholder="Email" class="input form__input">
+            <textarea name="message" placeholder="Message"
+                             class="input input_textarea form__input"></textarea>
             <button class="button form__button">Write to us</button>
           </form>
         </div>
