--- a/index.html
+++ b/index.html
@@ -49,23 +49,31 @@
       <section class="section">
         <h2 class="heading section__heading" id="gallery">Gallery<span class="heading__crown"></span></h2>
         <div class="gallery">
-          <article class="photos">
-            <img class="photos__img photos__img_wide" src="images/photos/1.jpg" alt="Hotel">
-            <img class="photos__img photos__img_narrow" src="images/photos/2.jpg" alt="Beach">
-          </article>
-          <h3 class="gallery__caption">Marina Palms / <a href="#" class="link">North Miami Beach, FL 33162</a></h3>
 
-          <article class="photos">
-            <img class="photos__img" src="images/photos/3.jpg" alt="Skyscraper">
-            <img class="photos__img" src="images/photos/4.jpg" alt="Mansion">
+          <article>
+            <div class="photos">
+              <img class="photos__img photos__img_wide" src="images/photos/1.jpg" alt="Hotel">
+              <img class="photos__img photos__img_narrow" src="images/photos/2.jpg" alt="Beach">
+            </div>
+            <h3 class="gallery__caption">Marina Palms / <a href="#" class="link">North Miami Beach, FL 33162</a></h3>
           </article>
-          <h3 class="gallery__caption">Edition Residens /<a href="#" class="link">Miami Beach, FL 33139</a></h3>
 
-          <article class="photos">
-            <img class="photos__img photos__img_narrow" src="images/photos/5.jpg" alt="Hotel Avalon">
-            <img class="photos__img photos__img_wide" src="images/photos/6.jpg" alt="Beach">
+          <article>
+            <div class="photos">
+              <img class="photos__img" src="images/photos/3.jpg" alt="Skyscraper">
+              <img class="photos__img" src="images/photos/4.jpg" alt="Mansion">
+            </div>
+            <h3 class="gallery__caption">Edition Residens /<a href="#" class="link">Miami Beach, FL 33139</a></h3>
           </article>
-          <h3 class="gallery__caption">Faena House / <a href="#" class="link">Miami Beach, FL 33140</a></h3>
+
+          <article>
+            <div class="photos">
+              <img class="photos__img photos__img_narrow" src="images/photos/5.jpg" alt="Hotel Avalon">
+              <img class="photos__img photos__img_wide" src="images/photos/6.jpg" alt="Beach">
+            </div>
+            <h3 class="gallery__caption">Faena House / <a href="#" class="link">Miami Beach, FL 33140</a></h3>
+          </article>
+
           <button class="button gallery__button">View All</button>
         </div>
       </section>
@@ -120,15 +128,15 @@
         <div class="contact">
           <article class="contact_text">
             <a href="mailto:Hello@miami.com" class="contact__link">Hello@miami.com</a><br><a href="tel:+12345555555"
-                                                                                                class="contact__link">+1
-              234 555-55-55</a>
+                                                                                             class="contact__link">+1
+            234 555-55-55</a>
             <address class="contact__address">400 first ave. n.<br>suite 700<br>Minneapolis, MN 55401</address>
           </article>
           <form action="#" method="post" class="form contact__form">
             <input type="text" name="name" placeholder="Name" class="input form__input">
             <input type="text" name="email" placeholder="Email" class="input form__input">
             <textarea name="message" placeholder="Message"
-                             class="input input_textarea form__input"></textarea>
+                      class="input input_textarea form__input"></textarea>
             <button class="button form__button">Write to us</button>
           </form>
         </div>
